--- a/mymwebsite/templates/index.html
+++ b/mymwebsite/templates/index.html
@@ -25,23 +25,21 @@
         </style>
         <div class="stage-shelf stage-shelf-right hidden" id="sidebar">
             <ul class="nav nav-bordered nav-stacked flex-column">
-                <li class="nav-header">Examples</li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="index.html">Startup</a>
+                    <a class="nav-link active" href="{% url 'docs' %}">Docs</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="minimal/index.html">Minimal</a>
+                    <a class="nav-link" href="{% url 'videos' %}">Videos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="bold/index.html">Bold</a>
-                </li>
-                <li class="nav-divider"></li>
-                <li class="nav-header">Docs</li>
-                <li class="nav-item">
-                    <a class="nav-link" href="docs/index.html">Toolkit</a>
+                    <a class="nav-link" href="{% url 'faq' %}">FAQ</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="http://getbootstrap.com">Bootstrap</a>
+                    <a class="nav-link" href="https://app.mymensor.com/accounts/login/">LOGIN</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="https://app.mymensor.com/accounts/register/"><strong
+                            style="background: #fff; padding: 12px; border-radius: 4px; color: #28669F;">Register</strong></a>
                 </li>
             </ul>
         </div>
@@ -68,10 +66,13 @@
                         <div class="hidden-sm-down text-uppercase">
                             <ul class="navbar-nav">
                                 <li class="nav-item px-1 ">
-                                    <a class="nav-link" href="#">StartUp</a>
+                                    <a class="nav-link" href="{% url 'docs' %}">Docs</a>
                                 </li>
                                 <li class="nav-item px-1 ">
-                                    <a class="nav-link" href="minimal/index.html">Minimal</a>
+                                    <a class="nav-link" href="{% url 'videos' %}">Videos</a>
+                                </li>
+                                <li class="nav-item px-1 ">
+                                    <a class="nav-link" href="{% url 'faq' %}">FAQ</a>
                                 </li>
                                 <li class="nav-item px-1 ">
                                     <a class="nav-link" href="https://app.mymensor.com/accounts/login/">Login</a>
@@ -203,7 +204,7 @@
                         <div class="col-md-4 px-4 mb-5">
                             <img class="mb-1" src="{% static "images/svgar.svg" %}">
                             <p>
-                                <strong>{% trans "Augmented Reality" %}</strong>{% trans " Capture the image always in the same position. (Available only with MyMensorAR and up)" %}
+                                <strong>{% trans "Augmented Reality" %}</strong>{% trans " Capture the image always in the same position. Images are filled automatically. (Available only with MyMensorAR and up)" %}
                             </p>
                         </div>
                         <div class="col-md-4 px-4 mb-5">
@@ -272,7 +273,7 @@
                                 <li class="py-4"><strong>Secure</strong> all HTTPS</li>
                             </ul>
 
-                            <button class="btn btn-lg btn-primary btn-block">
+                            <button class="btn btn-lg btn-secondary btn-block">
                                 Coming <span class="hidden-lg-down">SOON</span>
                             </button>
                         </div>
@@ -280,15 +281,15 @@
                         <div class="col-md-4 px-4 pb-2 mb-5">
                             <div class="px-2">
                                 <h6 class="text-muted text-uppercase mb-4">MyMensorAR</h6>
-                                <img class="mb-4" src="assets/img/startup-16.svg">
+                                <img class="mb-4" src="{% static "images/price.svg" %}">
                                 <p class="pb-2">The one size fits all solution. Use Augmented Reality and Data Features
                                     to control your personal and business projects</p>
                             </div>
 
                             <ul class="list-unstyled list-bordered text-xs-left my-4">
-                                <li class="py-4"><strong>ALL MYMENSOR FEATURES</strong> plus</li>
+                                <li class="py-4"><strong>ALL MYMENSOR FEATURES PLUS</strong></li>
                                 <li class="py-4"><strong>AR</strong> automatic and precise captures</li>
-                                <li class="py-4"><strong>Databse</strong> build your own bigdata</li>
+                                <li class="py-4"><strong>Database</strong> build your own bigdata</li>
                             </ul>
 
                             <button class="btn btn-lg btn-primary btn-block">
@@ -304,13 +305,13 @@
                             </div>
 
                             <ul class="list-unstyled list-bordered text-xs-left my-4">
-                                <li class="py-4"><strong>ALL MYMENSORAR FEATURES</strong> plus</li>
+                                <li class="py-4"><strong>ALL MYMENSORAR FEATURES PLUS</strong></li>
                                 <li class="py-4"><strong>API access</strong> upon request</li>
                                 <li class="py-4"><strong>Mobile App</strong> custom setups</li>
                             </ul>
 
                             <button class="btn btn-lg btn-primary btn-block">
-                                Coming <span class="hidden-lg-down">SOON</span>
+                                Upon Request
                             </button>
                         </div>
                     </div>
@@ -333,10 +334,9 @@
                         <div class="col-md-3 offset-md-1 mb-5">
                             <ul class="list-unstyled list-spaced">
                                 <li class="mb-2"><h6 class="text-uppercase">Product</h6></li>
-                                <li class="text-muted">Features</li>
-                                <li class="text-muted">Examples</li>
-                                <li class="text-muted">Tour</li>
-                                <li class="text-muted">Gallery</li>
+                                <li><a class="text-muted" href="{% url 'docs' %}">Docs</a></li>
+                                <li><a class="text-muted" href="{% url 'videos' %}">Videos</a></li>
+                                <li><a class="text-muted" href="{% url 'faq' %}">FAQ</a></li>
                             </ul>
                         </div>
                         <div class="col-md-3 mb-5">
