--- a/mymwebsite/templates/innerbase.html
+++ b/mymwebsite/templates/innerbase.html
@@ -46,20 +46,29 @@
 
     <body>
 
-    <nav class="navbar navbar-toggleable-md navbar-light" style="background-color: #e3f2fd;" id="myNavbar">
+    <nav class="navbar navbar-toggleable-sm navbar-light" style="background-color: #e3f2fd;" id="myNavbar">
         <div class="container">
-            <button type="button" class="navbar-toggler navbar-toggler-right" data-toggle="collapse"
-                    data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
+            <button type="button"
+                    class="navbar-toggler navbar-toggler-right"
+                    data-toggle="collapse"
+                    data-target="#navbarNavDropdown"
+                    aria-controls="navbarNavDropdown"
+                    aria-expanded="false"
                     aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-brand" href="{% url 'index' %}"><img src="{% static 'images/Logo_MyMensor_NEW3.svg' %}"
-                                                                  width="46" height="46" alt=""></a>
-            <div id="navbarNavDropdown" class="collapse navbar-collapse">
-                <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link" href="{% url 'index' %}">{% trans "Home" %}</a></li>
-                    <li class="nav-item"><a class="nav-link" href="https://app.mymensor.com/accounts/login/">Login</a></li>
-                    <li class="nav-item"><a class="nav-link" href="https://app.mymensor.com/accounts/register/">Register</a>
+            <a class="navbar-brand" href="{% url 'index' %}">
+                <img src="{% static 'images/Logo_MyMensor_NEW3.svg' %}" width="46" height="46" alt="">
+            </a>
+            <div id="navbarNavDropdown" class="collapse navbar-collapse mr-auto">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item"><a class="nav-link" href="{% url 'docs' %}">{% trans "Docs" %}</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'videos' %}">{% trans "Videos" %}</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'faq' %}">{% trans "FAQ" %}</a></li>
+                    <li class="nav-item"><a class="nav-link" href="https://app.mymensor.com/accounts/login/">Login</a>
+                    </li>
+                    <li class="nav-item"><a class="nav-link" href="https://app.mymensor.com/accounts/register/"><strong
+                            style="background: #fff; padding: 12px; border-radius: 4px; color: #28669F;">Register</strong></a>
                     </li>
                 </ul>
             </div>
