--- a/mymwebsite/templates/index.html
+++ b/mymwebsite/templates/index.html
@@ -121,7 +121,8 @@
                                 <div class="col-sm-6 mb-3">
                                     <h5>{% trans "Real Time" %}</h5>
                                     <p>{% trans "The captures come to your view immediately after they occur. You can react immediately, without waiting for someone to send you the information." %}<a
-                                            href="{% url 'docs' %}" class="text-primary">{% trans " See here." %}</a></p>
+                                            href="{% url 'docs' %}" class="text-primary">{% trans " See here." %}</a>
+                                    </p>
                                 </div>
                                 <div class="col-sm-6">
                                     <h5>{% trans "Reliability and Safety " %}</h5>
@@ -149,7 +150,7 @@
                             <h3>{% trans "Revolutionize your control practices. Work with portability of information and reality." %}</h3>
                             <p class="lead mb-4 text-gray-dark">{% trans "Using our web application you have access to all your information anywhere, anytime. The reality will be portable for you to be transported to wherever you are." %}</p>
                             <a class="btn btn-secondary btn-lg btn-borderless" href="{% url 'docs' %}"
-                                   role="button">{% trans "Read our docs" %}</a>
+                               role="button">{% trans "Read our docs" %}</a>
                         </div>
                     </div>
                 </div>
@@ -163,8 +164,9 @@
                             <h6 class="text-muted text-uppercase">{% trans "Simplified Sharing" %}</h6>
                             <h3>{% trans " Share captures automatically via Facebook, Twitter and Email." %}</h3>
                             <p class="lead mb-4 text-muted">{% trans " Promote your work with the reliability of the MyMensor certification. Your customers and friends can easily check the location and date of the media capture, even without a MyMensor subscription." %}</p>
-                            <a class="btn btn-secondary btn-lg btn-borderless" href="https://app.mymensor.com/accounts/register/"
-                                   role="button">{% trans "Try Now" %}</a>
+                            <a class="btn btn-secondary btn-lg btn-borderless"
+                               href="https://app.mymensor.com/accounts/register/"
+                               role="button">{% trans "Try Now" %}</a>
                         </div>
                     </div>
                 </div>
@@ -182,7 +184,7 @@
                             <h3>{% trans "Use our web application to gather and view your data, in numerical and graphical ways." %}</h3>
                             <p class="lead mb-4 text-gray-dark">{% trans "Using our web application you can stablish operational ranges, yellow and red alarm ranges. Export your data to a CSV file and use wherever you need it." %}</p>
                             <a class="btn btn-secondary btn-lg btn-borderless" href="{% url 'docs' %}"
-                                   role="button">{% trans "Read our docs" %}</a>
+                               role="button">{% trans "Read our docs" %}</a>
                         </div>
                     </div>
                 </div>
@@ -292,15 +294,17 @@
                                 <li class="py-4"><strong>Database</strong> build your own bigdata</li>
                             </ul>
 
-                            <a class="btn btn-primary btn-lg btn-block" href="https://app.mymensor.com/accounts/register/"
-                                   role="button">{% trans "Start MyMensorAR account" %}</a>
+                            <a class="btn btn-primary btn-lg btn-block"
+                               href="https://app.mymensor.com/accounts/register/"
+                               role="button">{% trans "Start MyMensorAR account" %}</a>
                         </div>
 
                         <div class="col-md-4 px-4 pb-1 mb-5">
                             <div class="px-2">
                                 <h6 class="text-muted text-uppercase mb-4">MyMensorCorp</h6>
                                 <img class="mb-4" src="{% static "images/uponrequestcomp.svg" %}">
-                                <p class="pb-2">A taylor made solution for your corporation. Drop us an email and we will build your custom setup together.</p>
+                                <p class="pb-2">A taylor made solution for your corporation. Drop us an email and we
+                                    will build your custom setup together.</p>
                             </div>
 
                             <ul class="list-unstyled list-bordered text-xs-left my-4">
@@ -310,42 +314,11 @@
                             </ul>
 
                             <a class="btn btn-primary btn-lg btn-block" href="mailto: contact@mymensor.com"
-                                   role="button">{% trans "Upon Request" %}</a>
+                               role="button">{% trans "Upon Request" %}</a>
 
                         </div>
                     </div>
 
-                </div>
-            </div>
-
-            <div class="block block-inverse app-footer">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-5 mb-5">
-                            <ul class="list-unstyled list-spaced">
-                                <li class="mb-2"><h6 class="text-uppercase">About</h6></li>
-                                <li class="text-muted">
-                                    It' been a long journey and we are just starting! Contact us anytime at <a
-                                        href="mailto: contact@mymensor.com">contact@mymensor.com</a>.
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="col-md-3 offset-md-1 mb-5">
-                            <ul class="list-unstyled list-spaced">
-                                <li class="mb-2"><h6 class="text-uppercase">Product</h6></li>
-                                <li><a class="text-muted" href="{% url 'docs' %}">Docs</a></li>
-                                <li><a class="text-muted" href="{% url 'videos' %}">Videos</a></li>
-                                <li><a class="text-muted" href="{% url 'faq' %}">FAQ</a></li>
-                            </ul>
-                        </div>
-                        <div class="col-md-3 mb-5">
-                            <ul class="list-unstyled list-spaced">
-                                <li class="mb-2"><h6 class="text-uppercase">Legal</h6></li>
-                                <li><a class="text-muted" href="{% url 'terms' %}">Terms of Service</a></li>
-                                <li><a class="text-muted" href="{% url 'privacy' %}">Privacy</a></li>
-                            </ul>
-                        </div>
-                    </div>
                 </div>
             </div>
 
