--- a/mymwebsite/templates/innerbase.html
+++ b/mymwebsite/templates/innerbase.html
@@ -76,8 +76,40 @@
     </nav>
     <div class="container">
         {% block content %}{% endblock %}
-        {% block footer %}{% endblock %}
     </div><!-- /.container -->
+        {% block footer %}
+            <div class="block block-inverse app-footer">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-5 mb-5">
+                            <ul class="list-unstyled list-spaced">
+                                <li class="mb-2"><h6 class="text-uppercase">About</h6></li>
+                                <li class="text-muted">
+                                    It' been a long journey and we are just starting! Contact us anytime at <a
+                                        href="mailto: contact@mymensor.com">contact@mymensor.com</a>.
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="col-md-3 offset-md-1 mb-5">
+                            <ul class="list-unstyled list-spaced">
+                                <li class="mb-2"><h6 class="text-uppercase">Product</h6></li>
+                                <li><a class="text-muted" href="{% url 'docs' %}">Docs</a></li>
+                                <li><a class="text-muted" href="{% url 'videos' %}">Videos</a></li>
+                                <li><a class="text-muted" href="{% url 'faq' %}">FAQ</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-md-3 mb-5">
+                            <ul class="list-unstyled list-spaced">
+                                <li class="mb-2"><h6 class="text-uppercase">Legal</h6></li>
+                                <li><a class="text-muted" href="{% url 'terms' %}">Terms of Service</a></li>
+                                <li><a class="text-muted" href="{% url 'privacy' %}">Privacy</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        {% endblock %}
+
     <script src="{% static "js/jquery-3.1.1.min.js" %}"></script>
     <script src="{% static "js/tether.min.js" %}"></script>
     <script src="{% static "js/toolkit.js" %}"></script>
