--- a/mymwebsite/templates/index.html
+++ b/mymwebsite/templates/index.html
@@ -173,7 +173,7 @@
             </div>
 
             <div class="block block-foreground block-fill-height"
-                 style="background-image: url({% static 'images/bigdatabackground.jpg' %});">
+                 style="background-image: url({% static 'images/bigdata.jpg' %});">
                 <div class="container">
                     <div class="row app-align-center">
                         <div class="col-md-5 push-md-7">
